--- a/src/components/chatWindow/ChatWindow.css
+++ b/src/components/chatWindow/ChatWindow.css
@@ -4,7 +4,7 @@
   overflow: auto;
 }
 
-.message-enter {
+/*.message-enter {
   opacity: 0.01;
   transform: scale(0.9) translateY(50%);
 }
@@ -45,4 +45,4 @@
   opacity: 0;
   transform: scale(4);
   transition: all 300ms ease-in;
-}
+}*/
