--- a/src/components/message/Message.css
+++ b/src/components/message/Message.css
@@ -4,10 +4,10 @@
   text-align: right;
 }
 .practiceMessage {
-  color: black;
-  background: #44bbff;
+  color: white;
+  background: #007bff;
   display: inline-block;
-  padding: .75rem;
+  padding: .45rem 1rem;
   border-radius: 23px;
   margin: 0;
   text-align: left;
@@ -23,7 +23,7 @@
   color: black;
   background: #dee1e2;
   display: inline-block;
-  padding: .75rem;
+  padding: .45rem 1rem;
   border-radius: 23px;
   margin: 0;
   text-align: left;
