--- a/src/components/chatBox/ChatBox.css
+++ b/src/components/chatBox/ChatBox.css
@@ -1,3 +1,8 @@
 .chatBox {
   font-family: sans-serif;
+  width: 500px;
+  height: 400px;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
 }
