--- a/src/components/inputBar/InputBar.css
+++ b/src/components/inputBar/InputBar.css
@@ -1,10 +1,11 @@
 .container {
-  text-align: center;
-  max-width: 600px;
+  width: 100%;
+  padding-top: 1%;
 }
 
 .form {
-  display: flex
+  display: flex;
+  background: white;
 }
 
 .input {
@@ -13,24 +14,18 @@
   margin: .5rem auto;
   border-radius: 3px;
   border: 1px solid #9b9b9b;
-  width: 508px;
-}
-
-.submit {
-  margin-left: 1rem;
-  width: 48px;
-  height: 48px;
-  border-radius: 30px;
-  background: #323463;
-  color: white;
+  width: 100%;
 }
 
 .submitBtn {
   background: #323463;
   border-radius: 45px;
-  height: 60px;
+  width: 59px;
+  height: 52px;
+  margin-left: 1%;
 }
 
 .sendIcon {
   padding: 5px 5px 0 0;
+  width: 30px;
 }
