--- a/src/components/chatBox/ChatBox.css
+++ b/src/components/chatBox/ChatBox.css
@@ -1,8 +1,7 @@
 .chatBox {
   font-family: sans-serif;
-  width: 500px;
-  height: 400px;
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
